--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "babel-runtime": "^6.22.0",
+    "better-scroll": "^0.1.7",
     "vue": "^2.1.10",
     "vue-resource": "^1.2.0",
     "vue-router": "^2.2.0"
